--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="nl" lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
+    <title>NXT Museum</title>
 </head>
 <body>
+    <p> dit is test voor nxt museum</p>
     
 </body>
 </html>
