--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>NXT Museum</title>
 </head>
 <body>
+    <ul>
+        <li><a class="navbar-item" href ="#tickets">tickets</a></li>
+        <li style="float:right"><a class="active"></a></li>
+    </ul>
     <p> dit is test voor nxt museum</p>
     
 </body>
