--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="nl" lang="en">
+<html>
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <title>NXT Museum</title>
+    <title>NXT museum</title>
 </head>
 <body>
     <ul>
-        <li><a class="navbar-item" href ="#tickets">tickets</a></li>
-        <li style="float:right"><a class="active"></a></li>
+    <li><a class="active" href="#">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
     </ul>
-    <p> dit is test voor nxt museum</p>
-    
+
 </body>
 </html>
+
+
