--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 </head>
 <body>
     <ul>
-    <li><a class="active" href="#">Home</a></li>
-    <li><a href="#news">News</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="#about">About</a></li>
+    <li><a class="blog" href="#">blog</a></li>
+    <li><a href="#informatie">informatie</a></li>
+    <li><a href="#tickets">tickets</a></li>
     </ul>
 
 </body>
