--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
+
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NXT museum</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
-    <ul>
-    <li><a class="blog" href="#">blog</a></li>
-    <li><a href="#informatie">informatie</a></li>
-    <li><a href="#tickets">tickets</a></li>
-    </ul>
+    <header>
+        <article class="header-content">
+            <h2>verken de virtuele wereld</h2>
+            <div class="line"></div>
+            <h1>De Betoverende Cyberwereld</h1>
+            <a href="#about" class="">leer meer</a>
+        </article>
 
+    </header>
 </body>
+
 </html>
-
-
